--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 .txt filter=lfs diff=lfs merge=lfs -text
 .RDataTmp filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
+.RData filter=lfs diff=lfs merge=lfs -text
